[package]
name = "how-to-vulkan"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
glam = "0.30.3"
log = "0.4.27"
pretty_env_logger = "0.5.0"
sdl3 = { version = "0.14.29", features = ["ash"] }
tobj = "4.0.3"

[profile.dev.package."*"]
opt-level = 3
